<resources>
    <string name="app_name">ToDoListApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_task">Add New Task</string>
    <string name="title">Title</string>
    <string name="details">details</string>
    <string name="choose_date">Choose Date</string>
    <string name="add_todo">Add Todo</string>
</resources>