<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="12dp"
    android:background="@color/white_blue"
    tools:context=".ui.home.list.TodoListFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="44sp"
        android:textColor="@color/font"
        android:text="@string/add_new_task"
        android:fontFamily="@font/arslanwessam"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/title_layout"
    app:boxBackgroundColor="@color/white_blue"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/title">


    <EditText
    android:id="@+id/todo_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/title"/>


</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/details_layout"
        app:boxBackgroundColor="@color/white_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_layout">

    <EditText
        android:id="@+id/todo_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:lines="4"/>
     </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white_blue"
        app:layout_constraintTop_toBottomOf="@id/details_layout"
        >
    <TextView
        android:id="@+id/chooseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:hint="@string/choose_date"
        android:padding="19dp"
        android:background="@color/white_blue"
         app:layout_constraintTop_toBottomOf="@id/details_layout"/>
    </com.google.android.material.textfield.TextInputLayout>
<Button
    android:id="@+id/add_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:text="@string/add_todo"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="21sp"
    android:backgroundTint="@color/primary_color"
    android:layout_marginVertical="12dp"
     android:paddingVertical="12dp"
    app:layout_constraintTop_toBottomOf="@id/date_container"/>
</androidx.constraintlayout.widget.ConstraintLayout>